codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_no_cli_handoff.snap
---
source: tui/src/app/daemon_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Daemon
  Not connected to the local background server.
  Run the Codez CLI to manage the daemon from this menu.


›    Install latest public stable
     Use this CLI build

  enter select · esc back
